test/errors/type/str/toupper.yasl
mt.lookup('', .toupper)(1)
